--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h1 class="-uppercase">
                     <strong style="margin-top:10px; color:#0f2f4d;" ;>Finding Atlantis</strong>
                 </h1>
-                <h2 class="-uppercase" style="italic;color:#0f2f4d;margin-top:10px;">
+                <h2 class="-uppercase" style=" color:#0f2f4d;margin-top:10px;">
                     <i>The way to sustainability</i>
                 </h2>
 
