mudei para hacking

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <strong style="margin-top:10px; color:#0f2f4d;" ;>Finding Atlantis</strong>
                 </h1>
                 <h2 class="-uppercase" style=" color:#0f2f4d;margin-top:10px;">
-                    <i>The way to sustainability</i>
+                    <i>Hacking</i>
                 </h2>
 
             </div>
