--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <div class="row" style="margin-top:12rem">
             <div class="col-lg-10 mx-auto">
                 <h1 class="-uppercase">
-                    <strong style="margin-top:10px; color:#0f2f4d;" ;>Finding Atlantis</strong>
+                    <strong style="margin-top:10px; color:#0f2f4d;" ;></strong>
                 </h1>
                 <h2 class="-uppercase" style=" color:#0f2f4d;margin-top:10px;">
-                    <i>Hacking</i>
+                    <i></i>
                 </h2>
 
             </div>
