--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <section class="bg-vblackVIsc22 text-lizard vertical-center fill" id="safety">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
+            <div class="col-lg-8 mx-auto text-center boxSafety">
                 <h2 class="section-heading text-lizard">Medidas de segurança</h2>
                 <hr class="light my-4">
                 <p class="text-lizard mb-4" align="justify">
