ready for feedback

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link js-scroll-trigger" href="#core_team">Equipa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
+                    <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
                 </li>
             </ul>
         </div>
@@ -75,7 +75,7 @@
 <header class="masthead text-center text-white d-flex">
     <div class="container my-auto ">
 
-        <div class="row" style="margin-top:12rem">
+        <div class="row d-none d-lg-block" style="margin-top:10rem">
             <div class="col-lg-10 mx-auto">
                 <h1 class="-uppercase">
                     <strong style="margin-top:10px; color:#0f2f4d;" ;></strong>
@@ -88,17 +88,17 @@
         </div>
         <br>
         <br>
-        <div class="mt-1">
+        <div class="mb-1">
             <div class='row'>
                 <div class=" mx-auto">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:13rem"
-                       target="_blank" href="https://www.best.eu.org/courses/list.jsp">Apply</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
+                       target="_blank" href="https://www.best.eu.org/courses/list.jsp">Inscreve-te</a>
                 </div>
             </div>
             <div class="row">
                 <div class=" mx-auto">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-right" style="width:13rem;"
-                       href="#about_course">Find Out More</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-right" style="width:12rem;"
+                       href="#about_course">Descobre mais</a>
                 </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
 
 
 <!-- Location -->
-<section id="location" class="bg-image text-white jumbotron vertical-center fill"
+<section id="location" class="bg-image text-white jumbotron vertical-center "
          style="background-image:url(img/porto2.jpg);">
     <div class="container transparent-box ">
         <div class="row">
@@ -199,7 +199,7 @@
             </div>
             <div class="col-sm">
                 <!--Google map-->
-                <div id="map-container-google-2" class="z-depth-1-half map-container-2" style="height:80vh">
+                <div id="map-container-google-2" class=" map-container-2 pb-0" style="height:80vh">
                     <iframe src="https://maps.google.com/maps?q=Porto&t=&z=13&ie=UTF8&iwloc=&output=embed"
                             frameborder="0"
                             style="border:0" allowfullscreen></iframe>
@@ -359,7 +359,7 @@
                         </div>
                         <div class="team-desc">
 							<h4>Flávia Carvalhido</h4>
-                            <span>Responsável do Evento</span>
+                            <span>Responsável pelo Evento</span>
                         </div>
                     </div>
                 </div>
@@ -415,7 +415,7 @@
             <div class="col-lg-8 mx-auto text-center">
                 <h2 class="section-heading">Contacta-nos</h2>
                 <hr class="light my-4">
-                <p class="mb-5">Ainda tens dúvidas? Não hesite em enviar-nos um email!</p>
+                <p class="mb-5">Ainda tens dúvidas? Não hesites em enviar-nos um email!</p>
             </div>
         </div>
         <div class="row">
@@ -427,13 +427,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center" style="padding-bottom:20px">
-                    <h2 class="section-heading">Main Organiser</h2>
+                    <h2 class="section-heading">Responsável pelo Evento</h2>
                     <p>
                         <a class="text-white" href="mailto:your-email@your-domain.com">flavia.carvalhido@bestporto.org</a>
                     </p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <h2 class="section-heading">Participants Responsible</h2>
+                    <h2 class="section-heading">Responsável de Participantes</h2>
                     <p>
                         <a class="text-white" href="mailto:your-email@your-domain.com">margarida.mendonça@bestporto.org</a>
                     </p>
