--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a class="nav-link js-scroll-trigger" href="#safety">Segurança</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#schedule_survival">Schedule/Survival Guide</a>
+                    <a class="nav-link js-scroll-trigger" href="#schedule_survival">Horário/Survival Guide</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#core_team">Equipa</a>
@@ -71,7 +71,7 @@
         </div>
     </div>
 </nav>
-
+<div class="spacing">.</div>
 <header class="masthead text-center text-white d-flex">
     <div class="container my-auto ">
 
@@ -109,35 +109,35 @@
 
 <!-- About best -->
 
-<section class="bg-viridiangreenVIsc21 text-white vertical-center fill" id="about">
+<section class="text-dark vertical-center fill" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 mx-auto text-center">
-                <h2 class="section-heading text-white">BEST</h2>
+                <h2 class="section-heading text-green">BEST</h2>
                 <hr class="light my-4">
-                <p class="text-faded mb-4" align="justify">
-                    BEST (Board of European Students of Technology) é uma organização europeia, voluntária e sem fins lucrativos, destinada a estudantes de tecnologia. Desde 1989, temos criado uma rede de estudantes em crescimento constante, dinâmica, inovadora e organizada, que fornece educação complementar a futuros engenheiros ao encorajar comunicação, cooperação e intercâmbio de estudantes nas faculdades e universidades técnicas. A nossa prioridade é oferecer serviços de elevada qualidade a estudantes técnicos de toda a Europa.
-                </p>
+                <p class="text-green mb-4" align="justify">
+                 BEST (Board of European Students of Technology) é uma organização europeia, voluntária e sem fins lucrativos, destinada a estudantes de tecnologia. Desde 1989, temos criado uma rede de estudantes em crescimento constante, dinâmica, inovadora e organizada, que fornece educação complementar a estudantes ao encorajar comunicação, cooperação e intercâmbio de estudantes nas faculdades e universidades técnicas. A nossa prioridade é oferecer serviços de elevada qualidade a estudantes técnicos de toda a Europa.   
+				</p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-6">
-                <img class="img-thumbnail" src="img/sc/img1.jpg"/>
+                <img class="img-thumbnail img-borders" src="img/sc/img1.jpg"/>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6">
-                <img class="img-thumbnail" src="img/sc/img2.jpg"/>
+                <img class="img-thumbnail img-borders" src="img/sc/img2.jpg"/>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6">
-                <img class="img-thumbnail" src="img/sc/img3.jpg"/>
+                <img class="img-thumbnail img-borders" src="img/sc/img3.jpg"/>
             </div>
         </div>
     </div>
 </section>
 <!-- About the course -->
-<section id="about_course" class="text-dark vertical-center fill">
+<section id="about_course" class="bg-viridiangreenVIsc21 text-white vertical-center fill">
     <div class="container ">
         <div class="col-lg-12 mx-auto text-center">
-            <h2 class="section-heading text-green">Sobre o Curso</h2>
+            <h2 class="section-heading text-white">Sobre o Curso</h2>
             <hr class="my-4">
         </div>
         <div class="row">
@@ -148,18 +148,14 @@
             </div>
             <div class="col-lg-6 text-center">
 
-                <p class="text-green" align="justify">
+                <p class="text-white" align="justify">
                     A mais recente edição do curso académico do BEST Porto está a chegar! Desta vez, 16 participantes de todo o país vão ter a oportunidade única de receber formação, partilhar ideias e aprender acerca de cibersegurança, enquanto conhecem (ou redescobrem) a cidade do Porto.
 					<br>
                     Tens interesse em hacking e informática? Em defenderes-te de ataques online? Ou gostavas de perceber o que realmente se passa por trás da espionagem como a que se vê em filmes?
-                    <br>
-                    Sustainability is a hot topic nowadays, and so, this year, our 12 day Summer Course will be
-                    addressing it by answering these questions,
-                    having the areas of Sea, Cutting Edge Devices and Renewable Energies as its main focus.
-                    <br>
-                    Seja qual for a razão, estes vão ser os temas explorados neste curso de 10 dias: “007: License to Hack” e vão ser abordadas as áreas de Informática e Engenharia da Computação e de Ciência da Computação
 					<br>
-                    Os participantes vão acabar o curso com um conhecimento geral acerca de segurança informática, mais especificamente hacking e segurança de redes. Tudo isto vai ser alcançado através de sessões entusiasmantes, workshops e uma avaliação em formato de competição para pôr em prática as aprendizagens.
+                    Seja qual for a razão, estes vão ser os temas explorados neste curso de 10 dias: “007: License to Hack” e vão ser abordadas as áreas de Informática e Engenharia da Computação e de Ciência da Computação.
+					<br>
+                    Os participantes vão acabar o curso com um conhecimento geral acerca de segurança informática, mais especificamente hacking e segurança de redes. Tudo isto vai ser alcançado através de sessões entusiasmantes, workshops e uma avaliação em formato de competição ou case study para pôr em prática as aprendizagens.
                 </p>
 
             </div>
@@ -167,6 +163,23 @@
         </div>
 </section>
 
+<!-- Target -->
+<section class="text-green vertical-center fill" id="target">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+                <h2 class="section-heading text-green">A quem se destina o curso?</h2>
+                <hr class="light my-4">
+                <p class="text-green mb-4" align="justify">
+                 Este curso destina-se a estudantes do ensino superior de cursos relacionados com tecnologia (engenharia ou ciências). É também esperado que os participantes tenham conhecimentos básicos de programação, de modo a poderem tirar o máximo de proveito que este curso tem para oferecer.
+				 <br>
+				 Os participantes são selecionados através de uma carta de motivação, em que  evidenciam certas informações (tais como originalidade, interesse no tópico e disposição para se divertir e conhecer novas pessoas) e da resposta a algumas questões. Se este curso te interessa e achas que te enquadras nestes critérios, inscreve-te!
+				</p>
+            </div>
+        </div>
+        
+    </div>
+</section>
 
 <!-- Location -->
 <section id="location" class="bg-image text-white jumbotron vertical-center "
@@ -240,7 +253,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
-                <h2 class="section-heading">Schedule</h2>
+                <h2 class="section-heading">Horário</h2>
                 <hr class="light my-4">
                 <p class="mb-4">Conhece o horário e as atividades que temos preparadas para ti.</p>
                 <a class="btn btn-light btn-xl sr-button" target="_blank"
@@ -260,29 +273,29 @@
                     <div id="recipeCarousel" class="carousel slide w-100" data-ride="carousel">
                         <div class="carousel-inner w-100" role="listbox">
                             <div class="carousel-item active">
-                                <img class="d-block col-4 img-fluid" src="img/2020/fotos para a sequencia/grupo2.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/grupo2.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid"
+                                <img class="d-block col-sm-8 col-md-4 img-fluid"
                                      src="img/2020/fotos para a sequencia/cultura1_1.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid" src="img/sc/img7.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/sc/img7.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid" src="img/sc/img8.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/sc/img8.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid" src="img/2020/fotos para a sequencia/cultura2.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/cultura2.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid" src="img/sc/img10.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/sc/img10.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid" src="img/2020/fotos para a sequencia/cidade1.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/cidade1.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-4 img-fluid" src="img/2020/fotos para a sequencia/aulas1.jpg">
+                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/aulas1.jpg">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#recipeCarousel" role="button" data-slide="prev">
@@ -312,6 +325,21 @@
                 </div>
             </div>
         </div>
+		<div class="col-centered">
+            <div class="row ">
+			<div class="col-sm-4 team-central">
+                    <div class="team-members">
+                        <div class="team-avatar">
+                            <img class="img-responsive" src="img/2020/ct/sofia.jpg" alt="">
+                        </div>
+                        <div class="team-desc">
+							<h4>Flávia Carvalhido</h4>
+                            <span>Responsável pelo Evento</span>
+                        </div>
+                    </div>
+                </div>
+			</div>
+		</div><!-- //end row -->
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4">
@@ -350,21 +378,6 @@
                 
             </div>
         </div><!-- //end row -->
-		<div class="col-centered">
-            <div class="row ">
-			<div class="col-sm-4 team-central">
-                    <div class="team-members">
-                        <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/sofia.jpg" alt="">
-                        </div>
-                        <div class="team-desc">
-							<h4>Flávia Carvalhido</h4>
-                            <span>Responsável pelo Evento</span>
-                        </div>
-                    </div>
-                </div>
-			</div>
-		</div>
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4">
