--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#about_course">Curso</a>
                 </li>
+				<li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#moreInfo">Inscrição</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#location">Localização</a>
                 </li>
@@ -116,7 +119,7 @@
                 <h2 class="section-heading text-green">BEST</h2>
                 <hr class="light my-4">
                 <p class="text-green mb-4" align="justify">
-                 BEST (Board of European Students of Technology) é uma organização europeia, voluntária e sem fins lucrativos, destinada a estudantes de tecnologia. Desde 1989, temos criado uma rede de estudantes em crescimento constante, dinâmica, inovadora e organizada, que fornece educação complementar a estudantes ao encorajar comunicação, cooperação e intercâmbio de estudantes nas faculdades e universidades técnicas. A nossa prioridade é oferecer serviços de elevada qualidade a estudantes técnicos de toda a Europa.   
+                 BEST (Board of European Students of Technology) é uma organização europeia, voluntária e sem fins lucrativos, destinada a estudantes de tecnologia. Desde 1989, temos criado uma rede de estudantes em crescimento constante, dinâmica, inovadora e organizada, que fornece educação complementar a estudantes ao encorajar comunicação, cooperação e intercâmbio de estudantes nas faculdades e universidades técnicas. A nossa prioridade é oferecer serviços de elevada qualidade a estudantes técnicos de toda a Europa.
 				</p>
             </div>
         </div>
@@ -141,12 +144,7 @@
             <hr class="my-4">
         </div>
         <div class="row">
-            <div class="col-lg-6 text-center" style="margin-top:5px; min-height:50vh">
-                <div class="aspect-ratio">
-                    <iframe width="560" height="275" src="https://www.youtube.com/embed/H6uhVGlUNf4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="col-lg-6 text-center">
+            <div class="col-lg-10 text-center team-central">
 
                 <p class="text-white" align="justify">
                     A mais recente edição do curso académico do BEST Porto está a chegar! Desta vez, 16 participantes de todo o país vão ter a oportunidade única de receber formação, partilhar ideias e aprender acerca de cibersegurança, enquanto conhecem (ou redescobrem) a cidade do Porto.
@@ -156,28 +154,40 @@
                     Seja qual for a razão, estes vão ser os temas explorados neste curso de 10 dias: “007: License to Hack” e vão ser abordadas as áreas de Informática e Engenharia da Computação e de Ciência da Computação.
 					<br>
                     Os participantes vão acabar o curso com um conhecimento geral acerca de segurança informática, mais especificamente hacking e segurança de redes. Tudo isto vai ser alcançado através de sessões entusiasmantes, workshops e uma avaliação em formato de competição ou case study para pôr em prática as aprendizagens.
-                </p>
+				</p>
 
             </div>
 
         </div>
 </section>
 
-<!-- Target -->
-<section class="text-green vertical-center fill" id="target">
+<!-- More info -->
+<section class="text-green vertical-center fill" id="moreInfo">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <h2 class="section-heading text-green">A quem se destina o curso?</h2>
+            <div class="col-lg-10 mx-auto text-center">
+                <h2 class="section-heading text-green">O que saber antes de realizar a inscrição</h2>
                 <hr class="light my-4">
                 <p class="text-green mb-4" align="justify">
-                 Este curso destina-se a estudantes do ensino superior de cursos relacionados com tecnologia (engenharia ou ciências). É também esperado que os participantes tenham conhecimentos básicos de programação, de modo a poderem tirar o máximo de proveito que este curso tem para oferecer.
+                 Este curso destina-se a estudantes do ensino superior de cursos relacionados com tecnologia (Engenharia ou Ciências). É também esperado que os participantes tenham conhecimentos básicos de programação, de modo a poderem tirar o máximo de proveito que este curso tem para oferecer. 
 				 <br>
-				 Os participantes são selecionados através de uma carta de motivação, em que  evidenciam certas informações (tais como originalidade, interesse no tópico e disposição para se divertir e conhecer novas pessoas) e da resposta a algumas questões. Se este curso te interessa e achas que te enquadras nestes critérios, inscreve-te!
+				 Os participantes são selecionados através de uma carta de motivação, em que  evidenciam certas informações (tais como originalidade, interesse no tópico e disposição para se divertir e conhecer novas pessoas) e da resposta a algumas questões. 
+				 <br>
+				 A taxa de participação é de 55,0€, cobrindo o alojamento, o transporte e as refeições (três refeições por dia, pelo menos uma delas quente) durante a totalidade do curso. Para além disso, também haverá uma caução de confirmação da inscrição no valor de 5,5€.
+				<br>
+				 Se este curso te interessa e achas que te enquadras nestes critérios, inscreve-te!
 				</p>
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-lg-6 text-center" style="padding-bottom:20px">
+               <a class="btn btn-light btn-xl sr-button" target="_blank"
+                   href="#" title="As inscrições para o curso abrem dia 15 de maio">Formulário de inscrição</a>
+            </div>
+            <div class="col-lg-6 text-center">
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href="#">Regulamento</a>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -257,8 +267,7 @@
                 <hr class="light my-4">
                 <p class="mb-4">Conhece o horário e as atividades que temos preparadas para ti.</p>
                 <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="https://drive.google.com/file/d/11e4koMuYONywzORe3wAfetKNRMoLljg4/view?usp=sharing">Open
-                    Schedule</a>
+                   href="https://drive.google.com/file/d/1Rv2GqrPZDVlyUGo6gOf7DMn8AvVc91vP/view">Ver Horário</a>
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading">Survival Guide</h2>
@@ -273,29 +282,29 @@
                     <div id="recipeCarousel" class="carousel slide w-100" data-ride="carousel">
                         <div class="carousel-inner w-100" role="listbox">
                             <div class="carousel-item active">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/grupo2.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/grupo2.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid"
+                                <img class="d-block col-sm-6 col-md-4 img-fluid"
                                      src="img/2020/fotos para a sequencia/cultura1_1.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/sc/img7.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/sc/img7.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/sc/img8.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/sc/img8.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/cultura2.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/cultura2.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/sc/img10.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/sc/img10.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/cidade1.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/cidade1.jpg">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block col-sm-8 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/aulas1.jpg">
+                                <img class="d-block col-sm-6 col-md-4 img-fluid" src="img/2020/fotos para a sequencia/aulas1.jpg">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#recipeCarousel" role="button" data-slide="prev">
@@ -330,7 +339,7 @@
 			<div class="col-sm-4 team-central">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/sofia.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Flavia.png" alt="">
                         </div>
                         <div class="team-desc">
 							<h4>Flávia Carvalhido</h4>
@@ -345,7 +354,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/eurico.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Marques.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>David Marques</h4>
@@ -356,7 +365,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/lobo.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/joao.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>João Carvalhal</h4>
@@ -367,7 +376,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/leonor.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/margarida.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Margarida Mendonça</h4>
@@ -383,7 +392,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/gabriel.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Lipi.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Filipe Ventura</h4>
@@ -394,7 +403,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/manel.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/isabel.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Isabel Almeida</h4>
@@ -405,7 +414,7 @@
 				<div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/2020/ct/lobo.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Alvaro.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Álvaro Pêgas</h4>
