--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <h2 class="section-heading">Survival Guide</h2>
                 <hr class="light my-4">
                 <p class="mb-4">Não te percas no Porto!</p>
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href=" https://drive.google.com/file/d/1hx74kbQcrH1AHvRj_eePB8FPB9t3eapN/view?usp=sharing">Open Survival Guide</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href=" https://drive.google.com/file/d/1hx74kbQcrH1AHvRj_eePB8FPB9t3eapN/view?usp=sharing">Survival Guide</a>
             </div>
         </div>
         <div class="row" style="padding-top:5vh;">
@@ -486,7 +486,7 @@
         </div>
     </div>
     <!-- Copyright -->
-    <div class="footer-copyright text-center">© 2020 Copyright BEST Porto</div>
+    <div class="footer-copyright text-center">© 2021 Copyright BEST Porto</div>
     <!-- Copyright -->
 </footer>
 
