--- a/english.html
+++ b/english.html
@@ -42,15 +42,7 @@
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" style="margin-left:5rem" href="#page-top"><img src="img/2020/logobest2.png" width="100%"></a>
 		<!-- multilingual-->
-		<a target="_self" href="index.html">
-		<button type="button" class="navbar-toggle multilingual" data-toggle="collapse" data-target=".navbar-collapse">
-		PT
-        <span class="sr-only">Toon/verberg navigatie</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button></a>
-	  
+		
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -79,7 +71,18 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link " target="_self" href="index.html">
+                        <button type="button" class=" navbar-toggle multilingual" data-toggle="collapse" data-target=".navbar-collapse">
+                        PT
+                        <span class="sr-only">Toon/verberg navigatie</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button></a>
+                </li>
             </ul>
+            
         </div>
     </div>
 </nav>
@@ -110,7 +113,7 @@
             <div class="row">
                 <div class=" mx-auto">
                     <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-right" style="width:12rem;"
-                       href="#about_course">Descobre mais</a>
+                       href="#about_course">Find out more</a>
                 </div>
             </div>
         </div>
@@ -451,9 +454,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-                <h2 class="section-heading">Contacta-nos</h2>
+                <h2 class="section-heading">Contact us</h2>
                 <hr class="light my-4">
-                <p class="mb-5">Ainda tens dúvidas? Não hesites em enviar-nos um email!</p>
+                <p class="mb-5">Do you still have quetions? Send us an email!</p>
             </div>
         </div>
         <div class="row">
@@ -493,7 +496,7 @@
         </div>
     </div>
     <!-- Copyright -->
-    <div class="footer-copyright text-center">© 2020 Copyright BEST Porto</div>
+    <div class="footer-copyright text-center">© 2021 Copyright BEST Porto</div>
     <!-- Copyright -->
 </footer>
 
