--- a/index.html
+++ b/index.html
@@ -42,14 +42,7 @@
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" style="margin-left:5rem" href="#page-top"><img src="img/2020/logobest2.png" width="100%"></a>
 		<!-- multilingual-->
-		<a target="_self" href="english.html">
-		<button type="button" class="navbar-toggle multilingual" data-toggle="collapse" data-target=".navbar-collapse">
-		EN
-        <span class="sr-only">Toon/verberg navigatie</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button></a>
+		
 	  
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -79,7 +72,18 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link " target="_self" href="english.html">
+                        <button type="button" class=" navbar-toggle multilingual" data-toggle="collapse" data-target=".navbar-collapse">
+                        EN
+                        <span class="sr-only">Toon/verberg navigatie</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button></a>
+                </li>
             </ul>
+            
         </div>
     </div>
 </nav>
