--- a/english.html
+++ b/english.html
@@ -384,7 +384,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/joao.png" alt="">
+                            <img class="img-responsive" src="img/ct/Joao.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>João Carvalhal</h4>
@@ -395,7 +395,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/margarida.png" alt="">
+                            <img class="img-responsive" src="img/ct/Margarida.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Margarida Mendonça</h4>
@@ -422,7 +422,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/isabel.png" alt="">
+                            <img class="img-responsive" src="img/ct/Isabel.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Isabel Almeida</h4>
