--- a/english.html
+++ b/english.html
@@ -198,11 +198,11 @@
         </div>
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
-               <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="#" title="As inscrições para o curso abrem dia 15 de maio">Apply here</a>
+               <button class="btn btn-light btn-xl sr-button" target="_blank"
+                    title="Applications start on the 15th of may">Apply here</button>
             </div>
             <div class="col-lg-6 text-center">
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href="#">Regulation</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href="https://docs.google.com/document/d/1Eipyz0foLpruU1gP59RnYq0p29tvyqum-zsLkJIuhCk/edit?usp=sharing">Regulation</a>
             </div>
         </div>
     </div>
