--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div class="mb-1">
             <div class='row'>
                 <div class=" mx-auto">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
-                       target="_blank" href="https://www.best.eu.org/courses/list.jsp">Inscreve-te</a>
+                    <button class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
+                       target="_blank">Inscreve-te</button>
                 </div>
             </div>
             <div class="row">
@@ -194,11 +194,11 @@
         </div>
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
-               <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="#" title="As inscrições para o curso abrem dia 15 de maio">Formulário de inscrição</a>
+               <button class="btn btn-light btn-xl sr-button" target="_blank"
+                   title="As inscrições para o curso abrem dia 15 de maio">Formulário de inscrição</button>
             </div>
             <div class="col-lg-6 text-center">
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href="#">Regulamento</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href=" https://docs.google.com/document/d/1b9jcpSsh-vd0vWf_iJ1Vkx9gbmYcHYFTLF6zF8Hje-4/edit?usp=sharing">Regulamento</a>
             </div>
         </div>
     </div>
@@ -378,7 +378,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/joao.png" alt="">
+                            <img class="img-responsive" src="img/ct/Joao.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>João Carvalhal</h4>
@@ -389,7 +389,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/margarida.png" alt="">
+                            <img class="img-responsive" src="img/ct/Margarida.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Margarida Mendonça</h4>
@@ -416,7 +416,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/isabel.png" alt="">
+                            <img class="img-responsive" src="img/ct/Isabel.png" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Isabel Almeida</h4>
