--- a/english.html
+++ b/english.html
@@ -106,8 +106,8 @@
         <div class="mb-1">
             <div class='row'>
                 <div class=" mx-auto">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
-                       target="_blank" href="https://www.best.eu.org/courses/list.jsp">Apply Now</a>
+                    <button class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
+                       target="_blank"   title="Applications start on the 15th of may">Apply Now</button>
                 </div>
             </div>
             <div class="row">
@@ -189,8 +189,8 @@
 				 <br>
 				 The participants are selected through a motivation letter, in which they show certain information about themselves (such as originality, interest in the topic and disposition to have fun and meet new people) and through answering some questions. 
 				 <br>
-				 The fee has a value of 55.0€ and covers lodging, transportation and meals (three meals per day, at least one of them hot) throughout the entire course. 
-				 Besides that, there will also be a 5.5€ deposit to confirm the registration in the course.
+                 The fee has a value of 55.00€ and covers lodging, transportation and meals (three meals per day, at least one of them hot) throughout the entire course. Besides that, there will also be a 35.00€ deposit to confirm the registration in the course. This deposit will be reimbursed after the end of the course.
+
 				 <br>
 				 If this course piques your interest and you think you fit these criteria, just apply!
 				</p>
@@ -286,13 +286,13 @@
                 <hr class="light my-4">
                 <p class="mb-4">Get to know the schedule and the activities we have for you.</p>
                 <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="https://drive.google.com/file/d/1Rv2GqrPZDVlyUGo6gOf7DMn8AvVc91vP/view">Open schedule</a>
+                   href="https://drive.google.com/file/d/1qGJ1YGqdP2nqd4VERyYS3ggD6LFRsJVK/view?usp=sharing">Open schedule</a>
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading">Survival Guide</h2>
                 <hr class="light my-4">
                 <p class="mb-4">Don't get lost in Porto!</p>
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href=" https://drive.google.com/file/d/1hx74kbQcrH1AHvRj_eePB8FPB9t3eapN/view?usp=sharing">Open Survival Guide</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href="https://drive.google.com/file/d/1NodD8DjJ6N0JV4enF-Ge2E13v5qdP5KR/view?usp=sharing">Open Survival Guide</a>
             </div>
         </div>
         <div class="row" style="padding-top:5vh;">
