--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class='row'>
                 <div class=" mx-auto">
                     <button class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
-                       target="_blank">Inscreve-te</button>
+                       target="_blank" title="As inscrições para o curso abrem dia 15 de maio">Inscreve-te</button>
                 </div>
             </div>
             <div class="row">
@@ -182,11 +182,12 @@
                 <h2 class="section-heading text-green">O que saber antes de realizar a inscrição</h2>
                 <hr class="light my-4">
                 <p class="text-green mb-4" align="justify">
-                 Este curso destina-se a estudantes do ensino superior de cursos relacionados com tecnologia (Engenharia ou Ciências). É também esperado que os participantes tenham conhecimentos básicos de programação, de modo a poderem tirar o máximo de proveito que este curso tem para oferecer. 
+                Este curso destina-se a estudantes do ensino superior de cursos relacionados com tecnologia (Engenharia ou Ciências). É também esperado que os participantes tenham conhecimentos básicos de programação, de modo a poderem tirar o máximo de proveito que este curso tem para oferecer.
 				 <br>
 				 Os participantes são selecionados através de uma carta de motivação, em que  evidenciam certas informações (tais como originalidade, interesse no tópico e disposição para se divertir e conhecer novas pessoas) e da resposta a algumas questões. 
 				 <br>
-				 A taxa de participação é de 55,0€, cobrindo o alojamento, o transporte e as refeições (três refeições por dia, pelo menos uma delas quente) durante a totalidade do curso. Para além disso, também haverá uma caução de confirmação da inscrição no valor de 5,5€.
+                 A taxa de participação é de 55,00€, cobrindo o alojamento, o transporte e as refeições (três refeições por dia, pelo menos uma delas quente) durante a totalidade do curso. Para além disso, também haverá uma caução de confirmação da inscrição no valor de 35,00€. Esta caução vai ser reembolsada após o fim do curso.
+                
 				<br>
 				 Se este curso te interessa e achas que te enquadras nestes critérios, inscreve-te!
 				</p>
@@ -280,13 +281,13 @@
                 <hr class="light my-4">
                 <p class="mb-4">Conhece o horário e as atividades que temos preparadas para ti.</p>
                 <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="https://drive.google.com/file/d/1Rv2GqrPZDVlyUGo6gOf7DMn8AvVc91vP/view">Ver Horário</a>
+                   href="https://drive.google.com/file/d/1qGJ1YGqdP2nqd4VERyYS3ggD6LFRsJVK/view?usp=sharing">Ver Horário</a>
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading">Survival Guide</h2>
                 <hr class="light my-4">
                 <p class="mb-4">Não te percas no Porto!</p>
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href=" https://drive.google.com/file/d/1hx74kbQcrH1AHvRj_eePB8FPB9t3eapN/view?usp=sharing">Survival Guide</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank" href="https://drive.google.com/file/d/1XUkqWJXa2ss7ZBt7499_1Sr9g7KjsqoK/view?usp=sharing">Survival Guide</a>
             </div>
         </div>
         <div class="row" style="padding-top:5vh;">
