--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class='row'>
                 <div class=" mx-auto">
                     <button class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
-                       target="_blank" title="As inscrições para o curso abrem dia 15 de maio">Inscreve-te</button>
+                       target="_blank" onclick="showAlert()" title="As inscrições para o curso abrem dia 15 de maio">Inscreve-te</button>
                 </div>
             </div>
             <div class="row">
@@ -122,7 +122,11 @@
 
 </header>
 
-
+<script>
+function showAlert() {
+    alert ("As inscrições para o curso abrem dia 15 de maio");
+  }
+</script>
 <!-- About best -->
 
 <section class="text-dark vertical-center fill" id="about">
@@ -195,7 +199,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
-               <button class="btn btn-light btn-xl sr-button" target="_blank"
+               <button class="btn btn-light btn-xl sr-button" target="_blank" onclick="showAlert()" 
                    title="As inscrições para o curso abrem dia 15 de maio">Formulário de inscrição</button>
             </div>
             <div class="col-lg-6 text-center">
