--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div class="mb-1">
             <div class='row'>
                 <div class=" mx-auto">
-                    <button class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
-                       target="_blank" onclick="showAlert()" title="As inscrições para o curso abrem dia 15 de maio">Inscreve-te</button>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-right" style="width:12rem;"
+                       href="https://forms.gle/w6MD3YPGCPn4ChuR6">Inscreve-te</a>
                 </div>
             </div>
             <div class="row">
@@ -199,8 +199,8 @@ function showAlert() {
         </div>
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
-               <button class="btn btn-light btn-xl sr-button" target="_blank" onclick="showAlert()" 
-                   title="As inscrições para o curso abrem dia 15 de maio">Formulário de inscrição</button>
+                <a class="btn btn-light btn-xl btn-xl sr-button" 
+                href="https://forms.gle/w6MD3YPGCPn4ChuR6">Formulário de inscrições</a>
             </div>
             <div class="col-lg-6 text-center">
                 <a class="btn btn-light btn-xl sr-button" target="_blank"href=" https://docs.google.com/document/d/1b9jcpSsh-vd0vWf_iJ1Vkx9gbmYcHYFTLF6zF8Hje-4/edit?usp=sharing">Regulamento</a>
