--- a/english.html
+++ b/english.html
@@ -106,8 +106,8 @@
         <div class="mb-1">
             <div class='row'>
                 <div class=" mx-auto">
-                    <button class="btn btn-primary btn-xl js-scroll-trigger float-sm-left" style="width:12rem"
-                       target="_blank" onclick="showAlert()"   title="Applications start on the 15th of may">Apply Now</button>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-right" style="width:12rem;"
+                href="https://forms.gle/XpYR2TEEbMY8MzAv7">Apply here</a>
                 </div>
             </div>
             <div class="row">
@@ -202,8 +202,8 @@
         </div>
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
-               <button class="btn btn-light btn-xl sr-button" target="_blank" onclick="showAlert()" 
-                    title="Applications start on the 15th of may">Apply here</button>
+                <a class="btn btn-light btn-xl btn-xl sr-button" style=""
+                href="https://forms.gle/XpYR2TEEbMY8MzAv7">Apply here</a>
             </div>
             <div class="col-lg-6 text-center">
                 <a class="btn btn-light btn-xl sr-button" target="_blank"href="https://docs.google.com/document/d/1Eipyz0foLpruU1gP59RnYq0p29tvyqum-zsLkJIuhCk/edit?usp=sharing">Regulation</a>
