--- a/english.html
+++ b/english.html
@@ -162,7 +162,12 @@
             <hr class="my-4">
         </div>
         <div class="row">
-            <div class="col-lg-10 text-center team-central">
+            <div class="col-lg-6 text-center" style="margin-top:5px; min-height:50vh">
+                <div class="aspect-ratio">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/d3dvBGz9gMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col-lg-6 text-center team-central">
 
                 <p class="text-white" align="justify">
                     The newest edition of BEST Porto’s Academic Course is coming. 
