--- a/index.html
+++ b/index.html
@@ -161,7 +161,12 @@ function showAlert() {
             <hr class="my-4">
         </div>
         <div class="row">
-            <div class="col-lg-10 text-center team-central">
+            <div class="col-lg-6 text-center" style="margin-top:5px; min-height:50vh">
+                <div class="aspect-ratio">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/d3dvBGz9gMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col-lg-6 text-center team-central">
 
                 <p class="text-white" align="justify">
                     A mais recente edição do curso académico do BEST Porto está a chegar! Desta vez, 16 participantes de todo o país vão ter a oportunidade única de receber formação, partilhar ideias e aprender acerca de cibersegurança, enquanto conhecem (ou redescobrem) a cidade do Porto.
