--- a/english.html
+++ b/english.html
@@ -170,9 +170,9 @@
             <div class="col-lg-6 text-center team-central">
 
                 <p class="text-white" align="justify">
-                    The newest edition of BEST Porto’s Academic Course is coming. 
-					This time, 16 applicants from all over the country will have the unique opportunity of receiving formation, share ideas and learn about cybersecurity, while meeting (or rediscovering) the city of Porto.
-					<br>
+                    	The newest edition of BEST Porto’s Academic Course is coming. 
+			This time, from August 31st to September 9th, 16 applicants from all over the country will have the unique opportunity of receiving formation, share ideas and learn about cybersecurity, while meeting (or rediscovering) the city of Porto.
+			<br>
                     Are you interested in hacking or IT? In defending yourself from online attacks? Or do you want to understand what really goes on behind movie-like espionage?
 					<br>
                     Whatever the reason may be, these will be the themes explored in this 10-day long course: “007: License to Hack” and areas like Informatics, Computing Engineering and Computer Science will be addressed.
