--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@ function showAlert() {
             <div class="col-lg-6 text-center team-central">
 
                 <p class="text-white" align="justify">
-                    A mais recente edição do curso académico do BEST Porto está a chegar! Desta vez, 16 participantes de todo o país vão ter a oportunidade única de receber formação, partilhar ideias e aprender acerca de cibersegurança, enquanto conhecem (ou redescobrem) a cidade do Porto.
-					<br>
+                    A mais recente edição do curso académico do BEST Porto está a chegar! 
+			Desta vez, de 31 de agosto a 9 de setembro, 16 participantes de todo o país vão ter a oportunidade única de receber formação, partilhar ideias e aprender acerca de cibersegurança, enquanto conhecem (ou redescobrem) a cidade do Porto.
+			<br>
                     Tens interesse em hacking e informática? Em defenderes-te de ataques online? Ou gostavas de perceber o que realmente se passa por trás da espionagem como a que se vê em filmes?
 					<br>
                     Seja qual for a razão, estes vão ser os temas explorados neste curso de 10 dias: “007: License to Hack” e vão ser abordadas as áreas de Informática e Engenharia da Computação e de Ciência da Computação.
