--- a/english.html
+++ b/english.html
@@ -68,6 +68,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#core_team">Core Team</a>
                 </li>
+				<li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#parceiros">Partners</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
                 </li>
@@ -456,6 +459,83 @@
     </div>
 </section>
 
+<!--Parceiros-->
+
+<section id="parceiros" class="bg-viridiangreenVIsc21 text-white section fill">
+    <div class="container team-size">
+        <div class="section_content ">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading text-white">Meet the event’s partners!</h2>
+                    <hr class="my-3">
+                </div>
+            </div>
+        </div>
+		<div class="col-centered">
+            <div class="row ">
+			<div class="col-sm-6 team-central spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://www.euronext.com/en" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/Euronext-logo3.png" alt="">
+                            </a>
+                    </div>
+            </div>
+			</div>
+		</div><!-- //end row -->
+        <div class="col-centered">
+            <div class="row ">
+                <div class="col-sm-4 spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://www.bosch.com/" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/Bosch-Logo2.png" alt="">
+							</a>                        
+                    </div>
+                </div>
+                <div class="col-sm-4 spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://multicert.com/pt/" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/Logo_Multicert2.png" alt="">
+							</a>                        
+                    </div>
+                </div>
+                <div class="col-sm-4 spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://www.noesis.pt/" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/Noesis-logo2.png" alt="">
+							</a>                        
+                    </div>
+                </div>
+                
+            </div>
+        </div><!-- //end row -->
+        <div class="col-centered">
+            <div class="row ">
+                <div class="col-sm-4 spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://www.vodafone.pt/" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/vodafone-logo_2.png" alt="">
+							</a>                        
+                    </div>
+                </div>
+                <div class="col-sm-4 spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://www.worten.pt/" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/Worten_logo2.png" alt="">
+							</a>                        
+                    </div>
+                </div>
+				<div class="col-sm-4 spacing-logos">
+                    <div class="logo logo-box">
+                            <a href="https://sonae.pt/pt/" target="_blank">
+							<img class="logo img-responsive" src="img/parceiros/bit2.png" alt="">
+							</a>                        
+                    </div>
+                </div>                
+            </div>
+        </div><!-- //end row -->
+    </div>
+    </div>
+</section>
 
 <!--Contact-->
 
