--- a/english.html
+++ b/english.html
@@ -110,7 +110,7 @@
             <div class='row'>
                 <div class=" mx-auto">
                     <a class="btn btn-primary btn-xl js-scroll-trigger float-sm-right" style="width:12rem;"
-                href="https://forms.gle/XpYR2TEEbMY8MzAv7">Apply here</a>
+                href="">Apply here</a>
                 </div>
             </div>
             <div class="row">
@@ -157,30 +157,23 @@
         </div>
     </div>
 </section>
-<!-- About the course -->
-<section id="about_course" class="bg-viridiangreenVIsc21 text-white vertical-center fill">
+<!-- About the course-->
+<section id="about_course" class="bg-darkyellowVIsc22 text-black vertical-center fill">
     <div class="container ">
         <div class="col-lg-12 mx-auto text-center">
-            <h2 class="section-heading text-white">About the course</h2>
+            <h2 class="section-heading text-black">About the course</h2>
             <hr class="my-4">
         </div>
         <div class="row">
             <div class="col-lg-6 text-center" style="margin-top:5px; min-height:50vh">
                 <div class="aspect-ratio">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/d3dvBGz9gMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/dVCHcU--9aI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-lg-6 text-center team-central">
 
-                <p class="text-white" align="justify">
-                    	The newest edition of BEST Porto’s Academic Course is coming. 
-			This time, from August 31st to September 9th, 16 applicants from all over the country will have the unique opportunity of receiving formation, share ideas and learn about cybersecurity, while meeting (or rediscovering) the city of Porto.
-			<br>
-                    Are you interested in hacking or IT? In defending yourself from online attacks? Or do you want to understand what really goes on behind movie-like espionage?
-					<br>
-                    Whatever the reason may be, these will be the themes explored in this 10-day long course: “007: License to Hack” and areas like Informatics, Computing Engineering and Computer Science will be addressed.
-					<br>
-                    The participants will finish this course with a general understanding regarding computer security, more specifically hacking and network security. All this will be accomplished through enthusiastic lectures, workshops and an evaluation in the format of a competition or case study to put into practice what you have learned.
+                <p class="text-black" align="justify">
+                    	COMING SOON
 				</p>
 
             </div>
@@ -188,7 +181,8 @@
         </div>
 </section>
 
-<!-- More info -->
+
+<!-- More info-->
 <section class="text-green vertical-center fill" id="moreInfo">
     <div class="container">
         <div class="row">
@@ -211,10 +205,10 @@
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
                 <a class="btn btn-light btn-xl btn-xl sr-button" style=""
-                href="https://forms.gle/XpYR2TEEbMY8MzAv7">Apply here</a>
+                href="">Apply here</a>
             </div>
             <div class="col-lg-6 text-center">
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href="https://docs.google.com/document/d/1Eipyz0foLpruU1gP59RnYq0p29tvyqum-zsLkJIuhCk/edit?usp=sharing">Regulation</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href="">Regulation</a>
             </div>
         </div>
     </div>
@@ -290,21 +284,21 @@
     </div>
 </section>
 <!--Schedule /Survival Guide-->
-<section id="schedule_survival" class="bg-viridiangreenVIsc21 text-white jumbotron vertical-center section fill">
+<section id="schedule_survival" class="bg-darkyellowVIsc22 text-black jumbotron vertical-center section fill">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 text-center" style="padding-bottom:20px">
                 <h2 class="section-heading">Schedule</h2>
-                <hr class="light my-4">
+                <hr class="my-4">
                 <p class="mb-4">Get to know the schedule and the activities we have for you.</p>
                 <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="https://drive.google.com/file/d/1qGJ1YGqdP2nqd4VERyYS3ggD6LFRsJVK/view?usp=sharing">Open schedule</a>
+                   href="">Open schedule</a>
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading">Survival Guide</h2>
-                <hr class="light my-4">
+                <hr class="my-4">
                 <p class="mb-4">Don't get lost in Porto!</p>
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href="https://drive.google.com/file/d/1NodD8DjJ6N0JV4enF-Ge2E13v5qdP5KR/view?usp=sharing">Open Survival Guide</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"href="">Open Survival Guide</a>
             </div>
         </div>
         <div class="row" style="padding-top:5vh;">
@@ -353,7 +347,7 @@
     </div>
 </section>
 
-<!--Core Team-->
+<!--Core Team
 
 <section id="core_team" class="section fill">
     <div class="container team-size">
@@ -379,7 +373,7 @@
                     </div>
                 </div>
 			</div>
-		</div><!-- //end row -->
+		</div>comment //end row
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4">
@@ -417,7 +411,7 @@
                 </div>
                 
             </div>
-        </div><!-- //end row -->
+        </div>comment //end row
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4">
@@ -454,12 +448,13 @@
                     </div>
                 </div>                
             </div>
-        </div><!-- //end row -->
+        </div>comment //end row
     </div>
     </div>
 </section>
+-->
 
-<!--Parceiros-->
+<!--Parceiros
 
 <section id="parceiros" class="bg-viridiangreenVIsc21 text-white section fill">
     <div class="container team-size">
@@ -481,7 +476,7 @@
                     </div>
             </div>
 			</div>
-		</div><!-- //end row -->
+		</div> comment //end row
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4 spacing-logos">
@@ -507,7 +502,7 @@
                 </div>
                 
             </div>
-        </div><!-- //end row -->
+        </div> comment //end row
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4 spacing-logos">
@@ -532,10 +527,11 @@
                     </div>
                 </div>                
             </div>
-        </div><!-- //end row -->
+        </div> comment //end row
     </div>
     </div>
 </section>
+-->
 
 <!--Contact-->
 
@@ -559,13 +555,13 @@
                 <div class="col-lg-6 text-center" style="padding-bottom:20px">
                     <h2 class="section-heading">Main Organizer</h2>
                     <p>
-                        <a class="text-white" href="mailto:your-email@your-domain.com">flavia.carvalhido@bestporto.org</a>
+                        <a class="text-white" href="mailto:your-email@your-domain.com">gabrielmachadojr@bestporto.org</a>
                     </p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">Pax Responsible</h2>
                     <p>
-                        <a class="text-white" href="mailto:your-email@your-domain.com">margarida.mendonça@bestporto.org</a>
+                        <a class="text-white" href="mailto:your-email@your-domain.com">cx.rmarques@gmail.com</a>
                     </p>
                 </div>
             </div>
@@ -579,7 +575,6 @@
     <div class="footer">
         <div class="container text-center">
             <a href="https://www.facebook.com/bestporto"> <i class="fab fa-facebook-f pr-1"></i></a>
-            <a href="https://www.twitter.com/bestporto"><i class="fab fa-twitter pr-1"></i></a>
             <a href="https://www.linkedin.com/company/best-porto/"><i class="fab fa-linkedin-in pr-1"></i></a>
             <a href="https://www.instagram.com/bestporto"><i class="fab fa-instagram pr-1"></i></a>
         </div>
